add modal window and hover for card

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a href="./index.html" class="logo link" lang="en">Web<span>Studio</span></a>
             <ul class="navigation-menu">
                 <li class="list"><a href="./index.html" class="link">Студия</a> </li>
-                <li class="list"><a href="./portfolio.html" class="link">Портфолио</a> </li>
+                <li class="list"><a href="./portfolio.html" class="link current">Портфолио</a> </li>
                 <li class="list"><a href="#" class="link">Контакты</a> </li>
             </ul>
         </nav>
@@ -62,15 +62,26 @@
         </ul>
         <ul class="container-portfolio-card">
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src="./images/portfolio/work-1.jpg" alt="Веб-сайт">
-                        <div class="portfolio-card-txt-container">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+                    <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Технокряк</p>
                         <p class="portfolio-card-txt-two">Веб-сайт</p>
-                        </div>
+                    </div>
                     </a>
+                  
                </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">   
                         <img src="./images/portfolio/work-11.jpg" width="370" height="294" alt="Дизайн">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Постер New Orlean vs Golden Star</p>
                         <p class="portfolio-card-txt-two">Дизайн</p>
@@ -78,7 +89,12 @@
                     </a>
               </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src=" ./images/portfolio/work-2.jpg" width="370" height="294" alt="Приложение">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Ресторан Seafood</p>
                         <p class="portfolio-card-txt-two">Приложение</p>
@@ -86,7 +102,12 @@
                     </a>
             </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src="./images/portfolio/work-3.jpg" width="370" height="294" alt="Маркетинг">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Проект Prime</p>
                         <p class="portfolio-card-txt-two">Маркетинг</p>
@@ -94,7 +115,12 @@
                     </a>
             </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src="./images/portfolio/work-4.jpg" width="370" height="294" alt="Приложение">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Проект Boxes</p>
                         <p class="portfolio-card-txt-two">Приложение</p>
@@ -102,7 +128,12 @@
                     </a>
             </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src="./images/portfolio/work-5.jpg" width="370" height="294" alt="Веб-сайт">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Inspiration has no Borders</p>
                         <p class="portfolio-card-txt-two">Веб-сайт</p>
@@ -110,7 +141,12 @@
                         </a>
 </div>                </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src="./images/portfolio/work-7.jpg" width="370" height="294" alt="Дизайн">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Издание Limited Edition</p>
                         <p class="portfolio-card-txt-two">Дизайн</p>
@@ -118,7 +154,12 @@
                     </a>
             </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src="./images/portfolio/work-8.jpg" width="370" height="294" alt="Маркетинг">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Проект LAB</p>
                         <p class="portfolio-card-txt-two">Маркетинг</p>
@@ -126,7 +167,12 @@
                     </a>
             </li>
             <li class="list portfolio-card"><a href="">
+                <div class="portfolio-card-img-comteiner">
                         <img src="./images/portfolio/work-9.jpg" width="370" height="294" alt="Приложение">
+                        <p class="portfolio-card-hover-txt">Технокряк это современная площадка распространения коронавируса. Компании используют
+                            эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
                         <div class="portfolio-card-txt-container">
                         <p class="portfolio-card-txt-one">Growing Business</p>
                         <p class="portfolio-card-txt-two">Приложение</p>
